I think that it is now an MVP

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/brand.css">
 	<link rel="stylesheet" type="text/css" href="styles/prose.css">
+	<link rel="stylesheet" type="text/css" href="styles/image.css">
 	<link rel="stylesheet" type="text/css" href="styles/layout.css">
 	<link rel="stylesheet" type="text/css" href="styles/ui.css">
 </head>
@@ -24,9 +25,16 @@
 				</video> --> 
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/KGJTZ_vemdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div><!-- CAMPAIGN VIDEO --> 
-			<div class="layout__donate-button">
+				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+				<input type="hidden" name="cmd" value="_s-xclick" />
+				<input type="hidden" name="hosted_button_id" value="M4KG627E6S5D4" />
+				<input class="layout__donate-button-pp" type="image" src="http://sqglz.ink/sqg-fund/img/donate-button.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+				<img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+				</form>
+
+			<!-- <div class="layout__donate-button">
 				<h1 class="layout__donate-copy">donate</h1>
-			</div><!-- DONATE BUTTON -->
+			</div> --><!-- DONATE BUTTON -->
 		</div><!-- VIDEO BOX -->
 
 		<div class="layout__campaign-stats">
@@ -45,10 +53,26 @@
 
 			 <h2 class="prose__claim">Grow this little seed of inspirational mementos into something I haven't fully imagined yet.</h2>
 			 <p class="prose__explication">Along the way, I'll also be setting up a little permanent site to continue this theme. It won't just be a webstore. Throughout the course of this campaign, with guidance from all of you, I hope to design something elegant and substantial that lives in one little corner of the internet and helps people in a rough patch like the one I'm just coming out of to find their way ahead.</p>
-		 </div><!-- CLAIM BOX -->
-		 <div class="layout__small-space">
-		 	<p>And yes, I'm comfortable with that being the first frame of the video.</p>
-		 </div><!-- SMALL SPACE -->
+		</div><!-- CLAIM BOX -->
+
+		<div class="image__box">
+			<h2 class="image__header">For this stage of the prototype I'm just gonna set these images here as examples of portraiture work in a range of production values.</h2> 
+
+			<img src="img/emily.jpg" alt="female toddler portraite detail" nopin="nopin">
+
+			<img src="img/ponderingHippie.jpg" alt="hippie scratches chin" nopin="nopin">
+
+			<img src="img/vince.jpg" alt="Vincent Price gasps" nopin="nopin">
+
+			<img src="img/dog.jpg" alt="dog waves a friendly wave" nopin="nopin">
+
+		</div><!-- IMAGE BOX -->
+
+		<div class="layout__small-space">
+	 		<p>And yes, I'm comfortable with that ridiculous face I'm making at the beginning of the video, well, as comfortable as I ever am with video.</p>
+		</div><!-- SMALL SPACE -->
 	</div><!-- SECOND BOX -->
+
+
 </body>
 </html>
