added viewport meta, begining nav.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>Inspirational Portraits</title>
 	<meta charset="utf-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" type="text/css" href="styles/brand.css">
 	<link rel="stylesheet" type="text/css" href="styles/prose.css">
 	<link rel="stylesheet" type="text/css" href="styles/image.css">
 	<link rel="stylesheet" type="text/css" href="styles/milestone.css">
+	<link rel="stylesheet" type="text/css" href="styles/nav.css">
 	<link rel="stylesheet" type="text/css" href="styles/layout.css">
 	<link rel="stylesheet" type="text/css" href="styles/ui.css">
 </head>
