nav built, doesn't go much of anywhere

--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
 	<link rel="stylesheet" type="text/css" href="styles/ui.css">
 </head>
 <body>
+
+	<div class="nav">
+		<a href="http://slowspreadsink.org/" target="_sss"><img class="nav__home nav__left" src="img/sss-mark.svg" alt="slow spread sink logo mark"></a>
+		<a href="" target="_sss"><span class="nav__link nav__left nav__campaign">Start a Campaign</span></a>
+		<div class="nav__right">
+			<a href="" target="_sss"><span class="nav__link">POSTS</span></a>
+			<a href="" target="_sss"><span class="nav__link">CREATOR</span></a>
+			<div class="nav__spacer"></div>
+		</div><!-- NAV RIGHT -->
+	</div><!-- NAV -->
+
 	<div class="layout__header">
 		<h1>Inspirational Portraits</h1>
 		<h5>A Community Funded Campaign</h5>
