--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 
 	<div class="nav">
 		<a href="http://slowspreadsink.org/" target="_sss"><img class="nav__home nav__left" src="img/sss-mark.svg" alt="slow spread sink logo mark"></a>
-		<a href="" target="_sss"><span class="nav__link nav__left nav__campaign">Start a Campaign</span></a>
+		<a href="new-campaign.html"><span class="nav__link nav__left nav__campaign">Start a Campaign</span></a>
 		<div class="nav__right">
-			<a href="" target="_sss"><span class="nav__link">POSTS</span></a>
-			<a href="" target="_sss"><span class="nav__link">CREATOR</span></a>
+			<a href="index.html"><span class="nav__link">CAMPAIGN</span></a>
+			<a href="posts.html"><span class="nav__link">POSTS</span></a>
+			<a href="http://sqglz.com/contact.html" target="_sss"><span class="nav__link">CREATOR</span></a>
 			<div class="nav__spacer"></div>
 		</div><!-- NAV RIGHT -->
 	</div><!-- NAV -->
