started ReadMe outline.

--- a/new-campaign.html
+++ b/new-campaign.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
 	<link rel="stylesheet" type="text/css" href="styles/layout.css">
 	<link rel="stylesheet" type="text/css" href="styles/ui.css">
+	<link rel="stylesheet" type="text/css" href="styles/new-campaign.css">
 </head>
 <body>
 
@@ -27,6 +28,21 @@
 	</div><!-- NAV -->
 
 	<div class="layout__header">
-		<h1>Inspirational Portraits</h1>
-		<h5>A Community Funded Campaign</h5>
+		<h1>Start a Campaign</h1>
+		<h5>Be a part of the experiment to surpass the dreams<br>of both Capitalism and Socialism</h5>
 	</div><!-- HEADER --> 
+
+	<div class="new-campaign__main">
+		<p>February 12, 2019 — Deacon Rodda</p>
+		<p>To be really, super, absolutely upfront, as of today, you are almost certainly better off using one of the big four crowdfunding platforms. They have integrated Content Management Systems, real-time display campaign for contributions and contributor activity, and a hundred other features which are not yet built out for this system. It is also worth pointing out at this time that Slow Spread Sink is not being built because those crowdfunding systems are bad. They aren't. Each of them solves a problem and lives in a much needed niche. They are more culturally accessible to the general public than SSS aims to be, and they have superb development teams.
+		</p>
+
+		<h2>If you do want to start a Slow Spread Sink campaign …</h2>
+		<p>You are certainly allowed. The whole project has been public since the first line of code was written. All you'll need is a basic knowledge of web development or a geeky friend. The repository can be found <a href="https://github.com/Grickl3/sqg-fund" target="_sss">here</a>. But, <em>for real</em>, it isn't all that great yet. Hell, if you are so inclined, maybe you'll help us build it.
+		</p>
+
+		<p>Slow Spread Sink is being built because there is farther to go. Because there are flaws and draw-backs in every system <em>(this one will be no exception)</em>. And, SQGLZ aims to fill some of the meaningful gaps in venture provisioning, especially for those who are ready to move past the destructive twentieth century paradigms of Capitalism and Socialism.
+		</p>
+	</div><!-- NEW CAMPAIGN MAIN -->
+
+	
