post creation, collapsing, and hotness all in place and well underway

--- a/new-campaign.html
+++ b/new-campaign.html
@@ -18,7 +18,7 @@
 
 	<div class="nav">
 		<a href="http://slowspreadsink.org/" target="_sss"><img class="nav__home nav__left" src="img/sss-mark.svg" alt="slow spread sink logo mark"></a>
-		<a href="new-campaign.html"><span class="nav__link nav__left nav__campaign">Start a Campaign</span></a>
+		<a href="new-campaign.html"><span class="nav__link nav__left nav__campaign nav__active">Start a Campaign</span></a>
 		<div class="nav__right">
 			<a href="index.html"><span class="nav__link">CAMPAIGN</span></a>
 			<a href="posts.html"><span class="nav__link">POSTS</span></a>
@@ -34,7 +34,7 @@
 
 	<div class="new-campaign__main">
 		<p>February 12, 2019 — Deacon Rodda</p>
-		<p>To be really, super, absolutely upfront, as of today, you are almost certainly better off using one of the big four crowdfunding platforms. They have integrated Content Management Systems, real-time display campaign for contributions and contributor activity, and a hundred other features which are not yet built out for this system. It is also worth pointing out at this time that Slow Spread Sink is not being built because those crowdfunding systems are bad. They aren't. Each of them solves a problem and lives in a much needed niche. They are more culturally accessible to the general public than SSS aims to be, and they have superb development teams.
+		<p>To be really, super, absolutely upfront, as of today, you are almost certainly better off using one of the big four crowdfunding platforms. They have integrated Content Management Systems, real-time display for campaign contributions and contributor activity, and a hundred other features which are not <em>yet</em> built out for this system. It is also worth pointing out that Slow Spread Sink is not being built because those crowdfunding systems are bad. They aren't. Each of them solves a problem and lives in a much needed niche. They are more culturally accessible to the general public than SSS aims to be, and they have superb development teams.
 		</p>
 
 		<h2>If you do want to start a Slow Spread Sink campaign …</h2>
