--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<a href="http://slowspreadsink.org/" target="_sss"><img class="nav__home nav__left" src="img/sss-mark.svg" alt="slow spread sink logo mark"></a>
 		<a href="new-campaign.html"><span class="nav__link nav__left nav__campaign">Start a Campaign</span></a>
 		<div class="nav__right">
-			<a href="index.html"><span class="nav__link">CAMPAIGN</span></a>
+			<a href="index.html"><span class="nav__link nav__active">CAMPAIGN</span></a>
 			<a href="posts.html"><span class="nav__link">POSTS</span></a>
 			<a href="http://sqglz.com/contact.html" target="_sss"><span class="nav__link">CREATOR</span></a>
 			<div class="nav__spacer"></div>
