--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 
 	<link rel="stylesheet" type="text/css" href="styles/brand.css">
 	<link rel="stylesheet" type="text/css" href="styles/prose.css">
+	<link rel="stylesheet" type="text/css" href="styles/mailchimp.css">
 	<link rel="stylesheet" type="text/css" href="styles/image.css">
 	<link rel="stylesheet" type="text/css" href="styles/milestone.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
 	<link rel="stylesheet" type="text/css" href="styles/layout.css">
 	<link rel="stylesheet" type="text/css" href="styles/ui.css">
+
+	<script type="text/javascript" src="scripts/ui.js"></script>
 </head>
 <body>
 
@@ -27,9 +30,62 @@
 	</div><!-- NAV -->
 
 	<div class="layout__header">
-		<h1>Inspirational Portraits</h1>
-		<h5>A Community Funded Campaign</h5>
+		<div class="layout__header__title-box">
+			<h1 class="layout__header__title">Slow Spread Sink</h1>
+			<h5>A Crowdsourcing System — Building Itself<em>Right Now — Before Your Very Eyes</em></h5>
+		</div>
+		<div id="mailchimp-trigger" class="mailchimp-box">
+			<span class="mailchimp__call-to-action">FOLLOW</span>
+		</div><!-- MAILCHIMP TRIGGER -->
 	</div><!-- HEADER --> 
+
+	<div id="mailchimp-modal" class="mailchimp__modal mailchimp__modal__hidden">
+		<div class="mailchimp__modal-backdrop"></div>
+		<div class="mailchimp__form-box">
+			<div id="mailchimp-close" class="mailchimp__modal__close-x"></div>
+			<div class="mailchimp__little-space"></div>
+			<!-- CODE FROM MAIL CHIMP -->
+				<!-- Begin Mailchimp Signup Form -->
+					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+					<style type="text/css">
+						#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+						/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+					</style>
+					<div id="mc_embed_signup">
+					<form action="https://sqglz.us20.list-manage.com/subscribe/post?u=897d9386663f48a53e9af6c33&amp;id=5d6486c2d4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div id="mc_embed_signup_scroll">
+						<h2>Follow this campaign!</h2>
+					<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+					<div class="mc-field-group">
+						<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+					</label>
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+					</div>
+					<div class="mc-field-group">
+						<label for="mce-FNAME">First Name </label>
+						<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+					</div>
+					<div class="mc-field-group">
+						<label for="mce-LNAME">Last Name </label>
+						<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+					</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_897d9386663f48a53e9af6c33_5d6486c2d4" tabindex="-1" value=""></div>
+					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					    </div>
+					</form>
+					</div>
+					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+					<!--End mc_embed_signup-->
+			<!-- CODE FROM MAIL CHIMP -->
+
+			<p>We assure you that you will receive no more than one email a week — probably a good deal less. Also, we would love any and all feedback on the project. Write: <br><br> deacon@sqglz.com</p>
+		</div><!-- MAIL CHIMP FORM BOX -->
+	</div><!-- MAILCHIMP MODAL -->
 
 	<div class="layout__top-box">
 		<div class="layout__video-box"> 
@@ -105,6 +161,21 @@
 		</div><!-- SMALL SPACE -->
 	</div><!-- SECOND BOX -->
 
+	<script type="text/javascript">
+		// MAIL CHIMP
+			var mailchimpTrigger = document.getElementById("mailchimp-trigger");
+			var mailChimpClose = document.getElementById("mailchimp-close");
+			var mailChimpModal = document.getElementById("mailchimp-modal");
+
+			mailchimpTrigger.addEventListener("click", function() {
+					mailChimpModal.classList.remove("mailchimp__modal__hidden");
+			});
+
+			mailChimpClose.addEventListener("click", function() {
+					mailChimpModal.classList.add("mailchimp__modal__hidden");
+			});
+
+	</script>
 
 </body>
 </html>
