--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en">
 <head>
-	<title>Inspirational Portraits</title>
+	<title>Slow Spread Sink</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -50,7 +50,7 @@
 		</div><!-- NAV DESKTOP -->
 	<!-- NAVS -->
 
-	<div class="layout__header">
+	<div class="layout__header"> 
 		<div class="layout__header__title-box">
 			<h1 class="layout__header__title">Slow Spread Sink</h1>
 			<h5>A Crowdsourcing System — Building Itself<em>Right Now — Before Your Very Eyes</em></h5>
@@ -60,55 +60,7 @@
 		</div><!-- MAILCHIMP TRIGGER -->
 	</div><!-- HEADER --> 
 
-	<div id="mailchimp-modal" class="mailchimp__modal mailchimp__modal__hidden">
-		<div class="mailchimp__modal-backdrop"></div>
-		<div class="mailchimp__form-box">
-			<div id="mailchimp-close" class="mailchimp__modal__close-x"></div>
-			<div class="mailchimp__little-space"></div>
-			<!-- CODE FROM MAIL CHIMP -->
-				<!-- Begin Mailchimp Signup Form -->
-					<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-					<style type="text/css">
-						#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-						/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-					</style>
-					<div id="mc_embed_signup">
-					<form action="https://sqglz.us20.list-manage.com/subscribe/post?u=897d9386663f48a53e9af6c33&amp;id=5d6486c2d4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-					    <div id="mc_embed_signup_scroll">
-						<h2>Follow this campaign!</h2>
-					<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-					</label>
-						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-					</div>
-					<div class="mc-field-group">
-						<label for="mce-FNAME">First Name </label>
-						<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-					</div>
-					<div class="mc-field-group">
-						<label for="mce-LNAME">Last Name </label>
-						<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
-					</div>
-						<div id="mce-responses" class="clear">
-							<div class="response" id="mce-error-response" style="display:none"></div>
-							<div class="response" id="mce-success-response" style="display:none"></div>
-						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_897d9386663f48a53e9af6c33_5d6486c2d4" tabindex="-1" value=""></div>
-					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-					    </div>
-					</form>
-					</div>
-					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-					<!--End mc_embed_signup-->
-			<!-- CODE FROM MAIL CHIMP -->
-
-			<p>We assure you that you will receive no more than one email a week — probably a good deal less. Also, we would love any and all feedback on the project. Write: <br><br> deacon@sqglz.com</p>
-		</div><!-- MAIL CHIMP FORM BOX -->
-	</div><!-- MAILCHIMP MODAL -->
-
-	<div class="layout__top-box">
+	<div class="layout__top-box">  
 		<div class="layout__video-box"> 
 			<div class="layout__campaign-video">
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/KGJTZ_vemdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -181,6 +133,54 @@
 	 		<img class="layout__footer__logo" src="http://sqglz.com/assets/img/sqglz.svg" alt="SQGLZ logo" nopin="nopin">
 		</div><!-- SMALL SPACE -->
 	</div><!-- SECOND BOX -->
+
+	<div id="mailchimp-modal" class="mailchimp__modal mailchimp__modal__hidden"> 
+		<div class="mailchimp__modal-backdrop"></div>
+		<div class="mailchimp__form-box">
+			<div id="mailchimp-close" class="mailchimp__modal__close-x"></div>
+			<div class="mailchimp__little-space"></div>
+			<!-- CODE FROM MAIL CHIMP -->
+				<!-- Begin Mailchimp Signup Form -->
+					<!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css"> -->
+					<style type="text/css">
+						#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+						/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+						   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+					</style>
+					<div id="mc_embed_signup">
+					<form action="https://sqglz.us20.list-manage.com/subscribe/post?u=897d9386663f48a53e9af6c33&amp;id=5d6486c2d4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate> 
+					    <div id="mc_embed_signup_scroll">
+						<h2 class="mailchimp__title">Follow this campaign!</h2>
+					<div class="indicates-required"><span class="asterisk">*</span><span class="mailchimp__required-blurb"> indicates required</span></div>
+					<div class="mc-field-group">
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
+						<label for="mce-EMAIL"><span class="asterisk">*</span>
+					</label>
+					</div>
+					<div class="mc-field-group">
+						<label for="mce-FNAME"></label>
+						<input type="text" value="" name="FNAME" class="" id="mce-FNAME" placeholder="first name">
+					</div>
+					<div class="mc-field-group">
+						<label for="mce-LNAME"></label>
+						<input type="text" value="" name="LNAME" class="" id="mce-LNAME" placeholder="last name">
+					</div> 
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_897d9386663f48a53e9af6c33_5d6486c2d4" tabindex="-1" value=""></div>
+					    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					    </div> 
+					</form>
+					</div>
+					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+					<!--End mc_embed_signup-->
+			<!-- CODE FROM MAIL CHIMP -->
+
+			<p class="mailchimp__assurance">We assure you that you will receive no more than one email a week — <em>probably a good deal less</em>. Also, we would love any and all feedback on the project. Write: <br><br> deacon@sqglz.com</p>
+		</div><!-- MAIL CHIMP FORM BOX -->  
+	</div><!-- MAILCHIMP MODAL -->  
 
 	<script type="text/javascript">
 		// MAIL CHIMP
