mobile optimied as all get out

--- a/index.html
+++ b/index.html
@@ -53,16 +53,17 @@
 	<div class="layout__header"> 
 		<div class="layout__header__title-box">
 			<h1 class="layout__header__title">Slow Spread Sink</h1>
-			<h5>A Crowdsourcing System — Building Itself<em>Right Now — Before Your Very Eyes</em></h5>
+			<h5>A Crowdsourcing System — Building Itself<br><em>Right Now — Before Your Very Eyes</em></h5>  
 		</div><!-- TITLE BOX -->    
 	</div><!-- HEADER --> 
 
 	<div class="layout__top-box"> 
-		<div class="layout__video-box"> 
-			<div class="layout__campaign-video-campaign-page">
-				<iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/KGJTZ_vemdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<div class="layout__video-box">  
+			<div class="">
+				<iframe class="video-mobile" width="330" height="315" src="https://www.youtube.com/embed/KGJTZ_vemdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe class="video-desktop" width="560" height="315" src="https://www.youtube.com/embed/KGJTZ_vemdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div><!-- CAMPAIGN VIDEO --> 
-			<div class="layout__video-button__box">
+			<div class="">
 				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 				<input type="hidden" name="cmd" value="_s-xclick" />
 				<input type="hidden" name="hosted_button_id" value="M4KG627E6S5D4" />
@@ -75,9 +76,8 @@
 				<h1 class="layout__donate-copy">donate</h1>
 			</div> --><!-- DONATE BUTTON -->
 		</div><!-- VIDEO BOX --> 
-	</div><!-- TOP BOX -->
 
-		<div class="layout__campaign-stats">
+		<div class="layout__campaign-stats">   
 			<div id="mailchimp-trigger" class="mailchimp-box">
 				<span class="mailchimp__call-to-action">FOLLOW</span>
 			</div><!-- MAILCHIMP TRIGGER -->  
@@ -102,10 +102,11 @@
 			</div><!-- MILESTONE -->
 			<div class="milestone__TBA-box"><span class="milestone__TBA">More to Come!</span></div>
 		</div><!-- CAMPAIGN STATS -->
+	</div><!-- TOP BOX -->
 
-	<div class="layout__second-box">  
-		<div class="prose__claim-box"> 
-			 <h3 class="prose__intro">There&nbsp;are&nbsp;three&nbsp;distinct&nbsp;and highly&nbsp;interrelated&nbsp;outcomes that&nbsp;this&nbsp;campaign is&nbsp;going&nbsp;for:</h3>
+	<div class="layout__second-box">
+		<div class="prose__claim-box">
+			 <h3 class="prose__intro">There are three distinct and highly interrelated outcomes that this campaign is going for:</h3>
 
 			 <h2 class="prose__claim">Create a crowdfunding option based in flexibility.</h2>
 			 <p class="prose__explication">Make it free from any irrelevant political or prescriptive excess, one which allows campaign designers to organize dynamic combinations of community resources including money, time, materials, and ideas.<br>And, make it free.</p>
@@ -181,7 +182,7 @@
 
 			<p class="mailchimp__assurance">We assure you that you will receive no more than one email a week — <em>probably a good deal less</em>. Also, we would love any and all feedback on the project. Write: <br><br> deacon@sqglz.com</p>
 		</div><!-- MAIL CHIMP FORM BOX -->  
-	</div><!-- MAILCHIMP MODAL -->  
+	</div><!-- MAILCHIMP MODAL -->
 
 	<script type="text/javascript"> 
 		// MAIL CHIMP
