--- a/posts.html
+++ b/posts.html
@@ -52,8 +52,9 @@
 
 	<div class="layout__header"> 
 		<div class="layout__header__title-box">
-			<h1>Inspirational Portraits</h1>
-			<h5>A Community Funded Campaign</h5>
+			<h1>Slow Spread Sink</h1>
+			<h5>A Self-Funded Crowdfunded System</h5>
+			<h5>from you to sqglz and back again</h5>
 		</div><!-- TITLE BOX -->
 	</div><!-- HEADER --> 
 
